<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.firexweb.newsi.SettingsActivity">

    <LinearLayout
        android:id="@+id/settings_action_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:baselineAligned="false"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:onClick="finishActivity"
                android:src="@drawable/ic_undo_white_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title"
                    android:textColor="@color/settings_title"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/settings_action_bar"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">
            <!-- Connection Settings -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_line"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.96"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <com.rey.material.widget.Switch
                        style="@style/Material.Widget.Switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:checked="true"
                        android:gravity="left" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/connectionSetting"
                        android:textColor="@color/settings_name"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/connectionSettingDesc"
                        android:textColor="@color/settings_desc"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
            <!-- Saving Settings -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bottom_line"
                android:baselineAligned="false"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/savingSetting"
                    android:textColor="@color/settings_name"
                    android:textDirection="rtl"
                    android:textSize="14sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!-- Radio Button -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.rey.material.widget.RadioButton
                            android:id="@+id/weekCachBtn"
                            style="@style/Material.Drawable.RadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/saveForAweek"
                            android:textColor="@color/settings_desc"
                            android:textSize="12sp" />

                    </LinearLayout>
                    <!-- End Of Radio Button -->
                    <!-- Radio Button -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.rey.material.widget.RadioButton
                            android:id="@+id/twoWeekCachBtn"
                            style="@style/Material.Drawable.RadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/saveFor2Weeks"
                            android:textColor="@color/settings_desc"
                            android:textSize="12sp" />


                    </LinearLayout>
                    <!-- End Of Radio Button -->
                    <!-- Radio Button -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.rey.material.widget.RadioButton
                            android:id="@+id/MonthCachBtn"
                            style="@style/Material.Drawable.RadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/saveFor1Month"
                            android:textColor="@color/settings_desc"
                            android:textSize="12sp" />


                    </LinearLayout>
                    <!-- End Of Radio Button -->
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
